[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/components/meteor/textures/meteor.png" type="Texture" id=1]
[ext_resource path="res://scenes/components/meteor/MeteorInCosmos.gd" type="Script" id=2]
[ext_resource path="res://scenes/components/puzzles/images/image_part_6.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/alien/textures/bubble.png" type="Texture" id=4]
[ext_resource path="res://scenes/components/puzzles/Puzzle.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/components/meteor/audio/rock-destroy.wav" type="AudioStream" id=6]

[sub_resource type="Gradient" id=29]
offsets = PoolRealArray( 0, 0.0682594, 0.631399, 0.894198, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0.948805, 0.948805, 0.948805, 0.0511945, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=30]
gradient = SubResource( 29 )

[sub_resource type="ParticlesMaterial" id=31]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
direction = Vector3( 1, 2, 0 )
spread = 180.0
gravity = Vector3( 0, 40, 0 )
initial_velocity = 160.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 40.0
scale = 0.1
scale_random = 0.15
color = Color( 1, 1, 1, 0.470588 )
color_ramp = SubResource( 30 )

[sub_resource type="Gradient" id=27]
offsets = PoolRealArray( 0, 0.524116, 0.894198, 1 )
colors = PoolColorArray( 0.628906, 0.628906, 0.628906, 1, 0.816406, 0.816406, 0.816406, 1, 0.948805, 0.948805, 0.948805, 0.0511945, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=26]
gradient = SubResource( 27 )

[sub_resource type="Curve" id=35]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -1.47036, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=36]
curve = SubResource( 35 )

[sub_resource type="ParticlesMaterial" id=32]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 1, 2, 0 )
spread = 120.0
gravity = Vector3( 0, 80, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 40.0
scale = 0.3
scale_random = 0.2
scale_curve = SubResource( 36 )
color = Color( 0.627451, 0.627451, 0.627451, 1 )
color_ramp = SubResource( 26 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 1120 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "rise"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 1120 ), Vector2( 32, -768 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_meteor_anim_reset_state"
} ]
}

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=34]
resource_name = "top"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1.2 ),
"transitions": PoolRealArray( 0.5, 0.5, 2, 0.5, 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( -0.3, 0.3 ), Vector2( 0.3, 0.3 ), Vector2( -0.3, 0.3 ), Vector2( 0.3, 0.3 ), Vector2( -0.3, 0.3 ), Vector2( 0.3, 0.3 ) ]
}

[node name="MeteorInCosmos" type="Area2D"]
position = Vector2( 32, 1120 )
collision_layer = 9216
collision_mask = 131104
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 22, 13, 24, 0, 19, -7, 10, -17, -3, -22, -19, -12, -25, -4, -22, 5, -12, 8, 7, 21, 13, 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="Texture" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BubbleBigFront" type="Sprite" parent="Texture"]
modulate = Color( 1, 1, 1, 0.666667 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="BurstBubble" type="Particles2D" parent="."]
z_index = 1
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 31 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="BurstMeteor" type="Particles2D" parent="."]
z_index = 1
emitting = false
amount = 200
lifetime = 0.6
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 32 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rise" type="AnimationPlayer" parent="."]
autoplay = "rise"
anims/RESET = SubResource( 11 )
anims/rise = SubResource( 12 )

[node name="Destroyed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 2.0
pitch_scale = 0.8
max_distance = 3000.0
bus = "Effects"
__meta__ = {
"_edit_lock_": true
}

[node name="PuzzleContainer" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Puzzle" parent="PuzzleContainer" instance=ExtResource( 5 )]
__meta__ = {
"_editor_description_": "Сэйв располагать так, чтобы пазл не был виден после рестарта.
Интересные пазлы располагать: обычный, интересный, обычный, обычный, интересный и тд.
Для усложнения получения пазла: рядом с пазлом размещать от 1 до 3х метеоров."
}
number = 6
_texture = ExtResource( 3 )

[node name="Lift" type="AnimationPlayer" parent="PuzzleContainer/Puzzle"]
anims/RESET = SubResource( 33 )
anims/top = SubResource( 34 )

[connection signal="area_entered" from="." to="." method="_on_MeteorInCosmos_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_MeteorInCosmos_body_entered"]
